<resources>
    <string name="app_name">KandiTag</string>
    <string name="p2p_kit">Enable\np2pkit</string>
    <string name="p2p">P2P\nDiscovery</string>
    <string name="geo">GEO\nDiscovery</string>
    <string name="clear">Clear Log</string>
    <string name="changeColor">Change Color</string>
    <string name="chooseColor">Choose your color</string>
    <string name="set">Set</string>
</resources>
