<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kitSwitchLayout"
        android:layout_alignParentRight="true"
        android:padding="13dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p2p_kit"
            android:id="@+id/kitLabel"
            android:layout_centerHorizontal="true"
            android:gravity="center" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/kitSwitch"
            android:checked="true"
            android:layout_below="@+id/kitLabel"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/p2pSwitchLayout"
        android:layout_below="@+id/kitSwitchLayout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p2p"
            android:id="@+id/p2pLabel"
            android:layout_centerHorizontal="true"
            android:gravity="center" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/p2pSwitch"
            android:layout_centerHorizontal="true"
            android:checked="true"
            android:layout_below="@+id/p2pLabel" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/p2pSwitchLayout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geo"
            android:id="@+id/geoLabel"
            android:layout_centerHorizontal="true"
            android:gravity="center" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/geoSwitch"
            android:checked="false"
            android:layout_below="@+id/geoLabel"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <ScrollView
        android:layout_toLeftOf="@+id/p2pSwitchLayout"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kitSwitchLayout"
        android:layout_above="@+id/clearTextView">

        <TextView
            android:layout_toLeftOf="@+id/p2pSwitchLayout"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" />

    </ScrollView>

    <TextView
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/clearTextView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"
        android:padding="16dp" />

    <TextView
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeColor"
        android:id="@+id/changeColorTextView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:textSize="20sp"
        android:padding="16dp"
        android:layout_alignParentLeft="true" />

</RelativeLayout>